--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,13 @@
   },
   "dependencies": {
     "@prisma/client": "^2.18.0",
+    "@types/cors": "^2.8.10",
+    "@types/multer": "^1.4.5",
     "chalk": "^4.1.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.19.0",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
     "typescript": "^4.2.3",
     "winston": "^3.3.3",
