--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@prisma/client": "^2.18.0",
+    "@types/connect-history-api-fallback": "^1.3.4",
     "@types/cors": "^2.8.10",
     "@types/multer": "^1.4.5",
     "chalk": "^4.1.0",
