--- a/web/package.json
+++ b/web/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serve:production": "NODE_ENV=production vue-cli-service serve",
     "build": "vue-cli-service build --modern",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "bootstrap": "^5.0.0-beta2",
-    "chart.js": "^2.9.4",
+    "chart.js": "^3.0.0-rc.2",
     "date-fns": "^2.19.0",
     "vue": "^2.6.11",
-    "vue-chartjs": "^3.5.1",
     "vue-router": "^3.4.7"
   },
   "devDependencies": {
