Forgot some files

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "bootstrap": "^5.0.0-beta2",
     "chart.js": "^3.0.0-rc.2",
-    "date-fns": "^2.19.0",
+    "date-fns": "2.22.1",
     "vue": "^2.6.11",
     "vue-preferences": "^3.0.0",
     "vue-router": "^3.4.7",
