--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier": "^2.2.1",
     "prisma": "2.23.0",
     "tsconfig-paths": "^3.9.0",
+    "typescript": "4.5.2",
     "tscpaths": "^0.0.9"
   },
   "dependencies": {
@@ -43,10 +44,8 @@
     "fs-extra": "^10.0.0",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
-    "reflect-metadata": "^0.1.13",
-    "typescript": "^4.2.3",
     "winston": "^3.3.3",
     "xlsx": "^0.16.9",
-    "zod": "^3.0.0-beta.4"
+    "zod": "3.11.6"
   }
 }
