--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "course-portal",
-  "version": "0.1.0",
+  "name": "course-portal-web",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "serve:production": "NODE_ENV=production vue-cli-service serve",
     "build": "vue-cli-service build --modern",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "docker:build": "docker build . --tag ${npm_package_name}:latest --tag ${npm_package_name}:${npm_package_version} --target=final"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "bootstrap": "^5.0.0-beta2",
     "chart.js": "^3.0.0-rc.2",
     "date-fns": "2.22.1",
-    "vue": "^2.6.11",
+    "vue": "^2.6.14",
     "vue-preferences": "^3.0.0",
     "vue-router": "^3.4.7",
     "yarn": "^1.22.10"
@@ -32,7 +33,7 @@
     "sass": "^1.27.0",
     "sass-loader": "^10.0.4",
     "style-resources-loader": "^1.4.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
