--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "date-fns": "2.22.1",
     "vue": "^2.6.14",
     "vue-preferences": "^3.0.0",
-    "vue-router": "^3.4.7",
-    "yarn": "^1.22.10"
+    "vue-router": "^3.4.7"
   },
   "devDependencies": {
     "@prettier/plugin-pug": "^1.10.1",
