--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "course-portal-web",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -19,6 +19,9 @@
     "vue-router": "^3.4.7"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.0.0",
+    "@commitlint/config-conventional": "^16.0.0",
+    "@commitlint/prompt-cli": "^16.0.0",
     "@prettier/plugin-pug": "^1.10.1",
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-plugin-eslint": "^4.5.0",
@@ -29,7 +32,7 @@
     "prettier": "^2.1.2",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.0.0",
-    "sass": "^1.27.0",
+    "sass": "1.45.0",
     "sass-loader": "^10.0.4",
     "style-resources-loader": "^1.4.1",
     "vue-template-compiler": "^2.6.14"
