--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "course-portal",
-  "version": "2.0.0",
+  "version": "2.1.1",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
@@ -13,9 +13,6 @@
     "docker:build": "docker build . --tag ${npm_package_name}:latest --tag ${npm_package_name}:${npm_package_version} --target=final"
   },
   "devDependencies": {
-    "@commitlint/cli": "^15.0.0",
-    "@commitlint/config-conventional": "^15.0.0",
-    "@commitlint/prompt-cli": "^15.0.0",
     "@types/cheerio": "^0.22.28",
     "@types/commander": "^2.12.2",
     "@types/connect-history-api-fallback": "^1.3.4",
@@ -25,6 +22,7 @@
     "@types/form-data": "^2.5.0",
     "@types/fs-extra": "^9.0.11",
     "@types/ioredis": "^4.28.5",
+    "@types/mathjs": "^9.4.2",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.33",
     "@types/node-fetch": "^2.5.8",
@@ -40,10 +38,9 @@
     "prettier": "^2.2.1",
     "tsconfig-paths": "^3.9.0",
     "tscpaths": "^0.0.9",
-    "typescript": "4.5.2"
+    "typescript": "4.5.4"
   },
   "dependencies": {
-    "prisma": "3.7.0",
     "@prisma/client": "3.7.0",
     "chalk": "^4.1.0",
     "cheerio": "^1.0.0-rc.5",
@@ -55,9 +52,11 @@
     "form-data": "^4.0.0",
     "fs-extra": "^10.0.0",
     "ioredis": "^4.28.2",
+    "mathjs": "^10.0.2",
     "module-alias": "^2.2.2",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
+    "prisma": "3.7.0",
     "redis": "^4.0.1",
     "winston": "^3.3.3",
     "winston-transport": "^4.4.1",
