--- a/web/package.json
+++ b/web/package.json
@@ -3,10 +3,9 @@
   "version": "2.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "serve:production": "NODE_ENV=production vue-cli-service serve",
-    "build": "vue-cli-service build --modern",
-    "lint": "vue-cli-service lint",
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview",
     "docker:build": "docker build . --tag ${npm_package_name}:latest --tag ${npm_package_name}:${npm_package_version} --target=final"
   },
   "dependencies": {
@@ -14,15 +13,16 @@
     "bootstrap": "^5.0.0-beta2",
     "chart.js": "^3.0.0-rc.2",
     "date-fns": "2.22.1",
-    "vue": "^2.6.14",
+    "vue": "^3.2.25",
     "vue-preferences": "^3.0.0",
-    "vue-router": "^3.4.7"
+    "vue-router": "4"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.0.0",
     "@commitlint/config-conventional": "^16.0.0",
     "@commitlint/prompt-cli": "^16.0.0",
     "@prettier/plugin-pug": "^1.10.1",
+    "@vitejs/plugin-vue": "^2.0.0",
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-plugin-eslint": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
@@ -35,7 +35,10 @@
     "sass": "1.45.0",
     "sass-loader": "^10.0.4",
     "style-resources-loader": "^1.4.1",
-    "vue-template-compiler": "^2.6.14"
+    "typescript": "^4.4.4",
+    "vite": "^2.7.2",
+    "vue-template-compiler": "^2.6.14",
+    "vue-tsc": "^0.29.8"
   },
   "eslintConfig": {
     "root": true,
