--- a/web/package.json
+++ b/web/package.json
@@ -9,12 +9,11 @@
     "docker:build": "docker build . --tag ${npm_package_name}:latest --tag ${npm_package_name}:${npm_package_version} --target=final"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "bootstrap": "^5.0.0-beta2",
-    "chart.js": "^3.0.0-rc.2",
+    "@fortawesome/fontawesome-free": "5.15.4",
+    "bootstrap": "5.1.3",
+    "chart.js": "3.7.0",
     "date-fns": "2.22.1",
-    "vue": "^3.2.25",
-    "vue-preferences": "^3.0.0",
+    "vue": "3.2.25",
     "vue-router": "4"
   },
   "devDependencies": {
@@ -22,6 +21,7 @@
     "@commitlint/config-conventional": "^16.0.0",
     "@commitlint/prompt-cli": "^16.0.0",
     "@prettier/plugin-pug": "^1.10.1",
+    "@types/chart.js": "^2.9.35",
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-plugin-eslint": "^4.5.0",
