--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "course-portal",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
@@ -16,6 +16,9 @@
     "@types/cheerio": "^0.22.28",
     "@types/commander": "^2.12.2",
     "@types/connect-history-api-fallback": "^1.3.4",
+    "@commitlint/cli": "^16.0.0",
+    "@commitlint/config-conventional": "^16.0.0",
+    "@commitlint/prompt-cli": "^16.0.0",
     "@types/cors": "^2.8.10",
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.11",
