--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "docker:build": "docker build . --tag ${npm_package_name}:latest --tag ${npm_package_name}:${npm_package_version} --target=final"
   },
   "devDependencies": {
-    "@types/cheerio": "^0.22.28",
-    "@types/commander": "^2.12.2",
-    "@types/connect-history-api-fallback": "^1.3.4",
     "@commitlint/cli": "^16.0.0",
     "@commitlint/config-conventional": "^16.0.0",
     "@commitlint/prompt-cli": "^16.0.0",
+    "@types/cheerio": "^0.22.28",
+    "@types/commander": "^2.12.2",
+    "@types/connect-history-api-fallback": "^1.3.4",
     "@types/cors": "^2.8.10",
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.11",
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@prisma/client": "3.7.0",
+    "@types/nodemailer": "^6.4.4",
     "chalk": "^4.1.0",
     "cheerio": "^1.0.0-rc.5",
     "commander": "^8.0.0",
@@ -59,6 +60,7 @@
     "module-alias": "^2.2.2",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.7.2",
     "prisma": "3.7.0",
     "redis": "^4.0.1",
     "winston": "^3.3.3",
